--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+
 node_modules/
 dist/
 npm-debug.log*
@@ -21,3 +22,4 @@ selenium-debug.log
 
 package-lock.json
 yarn.lock
+gfast-ui.code-workspace
