--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "url": "https://gitee.com/y_project/RuoYi-Vue.git"
   },
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.13",
     "@form-create/element-ui": "1.0.17",
     "@riophae/vue-treeselect": "0.4.0",
     "axios": "0.18.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "ckeditor4-vue": "^1.0.1",
     "clipboard": "2.0.4",
     "echarts": "4.2.1",
-    "element-ui": "2.13.0",
+    "element-ui": "2.15.0",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
     "js-beautify": "^1.10.2",
@@ -60,12 +63,14 @@
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-cropper": "0.4.9",
-    "vue-ele-form": "^0.8.52",
+    "vue-json-editor": "^1.4.3",
     "vue-quill-editor": "3.0.6",
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
-    "vuedraggable": "2.20.0",
-    "vuex": "3.1.0"
+    "vuedraggable": "^2.24.3",
+    "vuex": "3.1.0",
+    "vxe-table": "^3.1.5",
+    "xe-utils": "^3.1.8"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -80,6 +85,8 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "chalk": "2.4.2",
     "chokidar": "2.1.5",
     "connect": "3.6.6",
