--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@riophae/vue-treeselect": "0.4.0",
     "axios": "0.18.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "bignumber.js": "^9.0.1",
     "ckeditor4-vue": "^1.0.1",
     "clipboard": "2.0.4",
     "echarts": "4.2.1",
@@ -58,6 +59,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "print-js": "^1.6.0",
     "screenfull": "4.2.0",
     "sortablejs": "1.8.4",
     "vue": "2.6.10",
