--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
     "@babel/plugin-proposal-optional-chaining": "^7.12.13",
     "@form-create/element-ui": "1.0.17",
+    "@nx-js/observer-util": "^4.2.2",
     "@riophae/vue-treeselect": "0.4.0",
     "axios": "0.18.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -70,9 +71,7 @@
     "vue-router": "3.0.2",
     "vue-splitpane": "1.0.4",
     "vuedraggable": "^2.24.3",
-    "vuex": "3.1.0",
-    "vxe-table": "^3.1.5",
-    "xe-utils": "^3.1.8"
+    "vuex": "3.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -108,8 +107,7 @@
     "serve-static": "^1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.0",
-    "vue-template-compiler": "2.6.10",
-    "vuetable-2": "^1.7.5"
+    "vue-template-compiler": "2.6.10"
   },
   "engines": {
     "node": ">=8.9",
